# 21_particle_system

./: .gitignore  CMakeLists.txt  README.md  output.txt
maps/: attractor_and_repeller.json  default.json  demo_a.json  demo_b.json  demo_c.json  demo_d.json  demo_e.json  demo_f.json
project/: debug.h  main.cpp
project/common/: OpenGL.h  common.h  exception.cpp  read_file.cpp
project/computer/: _computer_.cpp  _computer_.h  computer.cpp  computer.h  computer_.cpp  namespace.h
project/computer/argument/: argument.cpp  argument.h
project/computer/buffer/: buffer.cpp  buffer.h
project/computer/core/: core.cpp  core.h
project/computer/kernel/: kernel.cpp  kernel.h
project/engine/: engine.h  namespace.h
project/engine/OpenGL_objects/: vao.cpp  vao.h  vbo.h
project/engine/buffer/: buffer.cpp  buffer.h  vao.cpp  vao.h  vbo.h
project/engine/buffers/: buffer.cpp  vao.cpp  vao.h
project/engine/callback/: callback.cpp  callback.h  timer.h
project/engine/callbacks/: callback.cpp  callback.h  timer.cpp  timer.h
project/engine/camera/: camera.cpp  camera.h
project/engine/core/: calculate_fps.cpp  core.cpp  core.h  draw.cpp  finish.cpp  glfw_callback_x.cpp  launch_x.cpp  receive_event.cpp  settings.cpp  start.cpp
project/engine/ebo/: ebo.cpp  ebo.h
project/engine/event/: event.cpp  event.h
project/engine/functor/: functor.cpp  functor.h
project/engine/point/: point.cpp  point.h
project/engine/program/: program.cpp  program.h  shader.cpp  shader.h
project/engine/renderer/: renderer.cpp  renderer.h  renderers.h
project/engine/shader/: shader.cpp  shader.h
project/engine/texture/: texture.cpp  texture.h
project/engine/timeout/: timeout.h
project/engine/timer/: timer.cpp  timer.h
project/engine/uniform/: uniform.cpp  uniform.h
project/engine/vao/: vao.cpp  vao.h
project/engine/vbo/: vbo.h
project/gui/: gui.h  namespace.h
project/gui/abstract/: container.h  editor.h  object.h  owner.h  property.h
project/gui/button/: button.cpp  button.h  button_with_icon.cpp  button_with_icon.h  button_with_label.cpp  button_with_label.h  renderer.cpp  renderers.cpp
project/gui/container/: button_pack.cpp  button_pack.h  container.h  horizontal_pack.cpp  horizontal_pack.h  vertical_pack.cpp  vertical_pack.h
project/gui/drawer/: drawer.cpp  drawer.h
project/gui/font/: font.cpp  font.h
project/gui/icon/: icon.cpp  icon.h
project/gui/label/: label.cpp  label.h  renderer.cpp
project/gui/pack/: button_pack.cpp  button_pack.h  pack.cpp  pack.h
project/gui/point/: point.cpp  point.h
project/gui/rectangle/: rectangle.cpp  rectangle.h
project/gui/renderers/: renderers.cpp  renderers.h
project/gui/space/: space.h
project/gui/symbol/: symbol.cpp  symbol.h
project/gui/system/: functors.cpp  renderer.cpp  system.cpp  system.h  x_renderer.cpp
project/particle_system/: namespace.h  particle_system.cpp  particle_system.h  renderer.cpp  renderers.cpp  x_renderer.cpp
project/particle_system/core/: core.cpp  core.h
project/particle_system/manager/: build.cpp  computer_x.cpp  engine_x.cpp  function_x.cpp  initialize.cpp  manager.cpp  manager.h  renderer.cpp
project/particle_system/map/: map.cpp  map.h
project/particle_system/object/: object.h
project/particle_system/renderers/: renderers.cpp  renderers.h
project/resources/OpenCL/: attractor_x.txt  construct_cube.txt  consumer.txt  consumer_x.txt  emitter.txt  emitter_x.txt  initialize_as_x.txt  macros.txt  object.txt  particle_x.txt  physics.txt  repeller_x.txt  reset.txt  source.txt  update.txt  update_system.txt  vector.txt  vector3.txt  vector4.txt  xorshift.txt
project/resources/OpenGL/: button.fragment.glsl  button.second.fragment.glsl  button.second.vertex.glsl  fragment.glsl  gui.rectangle.fragment.glsl  gui.text.vertex.glsl  gui.texture.fragment.glsl  particle.fragment.glsl  particle.vertex.glsl  text.fragment.glsl  vertex.glsl
project/tools/: exception.cpp  read_file.cpp  tools.h
